fix(docker): Switch to requirements.txt for reliable builds
Refactored the Dockerfile to use a `requirements.txt` file instead of `pipenv install`.

This resolves a persistent `ModuleNotFoundError` where packages were not being correctly installed or found in the Python path inside the container. Using `pip install -r requirements.txt` is a more robust and standard practice for building reproducible Docker images.

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,11 @@ django-allauth = "*"
 djangorestframework-simplejwt = "*"
 scikit-learn = "*"
 pandas = "*"
+google-generativeai = "*"
+python-decouple = "*"
+psycopg2-binary = "*"
+dj-database-url = "*"
+pipenv-to-requirements = "*"
 
 [dev-packages]
 
