feat: GoogleLoginCallbackView for frontend integrating

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ python-decouple = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
 pipenv-to-requirements = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
