--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ psycopg2-binary = "*"
 dj-database-url = "*"
 pipenv-to-requirements = "*"
 django-cors-headers = "*"
+pillow = "*"
 
 [dev-packages]
 
